[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Coin1.png" type="Texture" id=1]
[ext_resource path="res://script/GoDown.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 9.0

[node name="Coin1" type="Area2D"]
position = Vector2( 248, 299 )
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Coin1_body_entered"]
