[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Cube.png" type="Texture" id=1]
[ext_resource path="res://script/GoDown.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 94, 9 )

[node name="Obstacle" type="Area2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 1.5 )
texture = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Obstacle_body_entered"]
